--- a/rca/project_styleguide/templates/patterns/molecules/navigation/primarynav.html
+++ b/rca/project_styleguide/templates/patterns/molecules/navigation/primarynav.html
@@ -13,7 +13,7 @@
         {% include 'patterns/molecules/menu-toggle/menu-toggle.html' with modifier="header__menu-toggle--medium" %}
         {% include 'patterns/molecules/search-toggle/search-toggle.html' %}
 
-        <a class="header__menu-close" href="#" data-close-menu>
+        <a class="header__menu-close" href="#" aria-label="Close menu" data-close-menu>
             <svg width="14" height="14"><use xlink:href="#close"></use></svg>
         </a>
     </div>
@@ -119,4 +119,3 @@
         {% include 'patterns/molecules/navigation/standoutnav.html' with modifier="nav--standout-mobile" %}
     </span>
 </span>
-
