--- a/rca/project_styleguide/templates/patterns/molecules/tab-nav/tab-nav.html
+++ b/rca/project_styleguide/templates/patterns/molecules/tab-nav/tab-nav.html
@@ -6,7 +6,7 @@
                     <a class="tab-item__link" href="#">{{ tab.title }}</a>
                 </li>
             {% endfor %}
-            <li class="tab-item">
+            <li class="tab-item" role="tab">
                 <a href="#contact" class="tab-item__link link link--tertiary link--down">
                     <span class="link__label">Contact us</span>
                     <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
