--- a/rca/static_src/sass/components/_search.scss
+++ b/rca/static_src/sass/components/_search.scss
@@ -5,6 +5,10 @@
         margin-right: ($gutter * 1.75);
     }
 
+    &__label {
+        @include hidden();
+    }
+
     &__input {
         background: $color--primary;
         color: $color--white;
