--- a/rca/project_styleguide/templates/patterns/atoms/logo/logo.html
+++ b/rca/project_styleguide/templates/patterns/atoms/logo/logo.html
@@ -1,6 +1,6 @@
 {% load wagtailcore_tags %}
 
-<a class="logo" href="{% slugurl 'home' %}">
+<a class="logo" href="{% slugurl 'home' %}" aria-label="Home">
     <svg class="logo__image" width="162" height="70">
         <use xlink:href="#logo" />
     </svg>
