--- a/rca/project_styleguide/templates/patterns/organisms/footer/footer.html
+++ b/rca/project_styleguide/templates/patterns/organisms/footer/footer.html
@@ -38,7 +38,7 @@
             <nav class="footer__links" role="navigation" aria-label="Footer navigation">
                 {% footerlinks %}
             </nav>
-            <div class="footer__credit" role="contentinfo">
+            <div class="footer__credit">
                 <p class="footer__credit-item">Royal College of Art, Kensington Gore, London SW7 2EU</p>
                 <p class="footer__credit-item">RCA&trade; Royal College of Art&trade; are trademarks of the Royal College of Art </p>
             </div>
