--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
@@ -14,7 +14,7 @@
         <header class="page__header bg bg--dark">
             <div class="title-area grid">
                 <div class="title-area__content">
-                    <nav class="title-area__breadcrumb">
+                    <nav class="title-area__breadcrumb" aria-label="Breadcrumb">
                         {% include "patterns/molecules/breadcrumb/breadcrumb.html" %}
                     </nav>
                     <h1 class="title-area__header heading heading--display-two">{{ page.title }}</h1>
