Add hero and strapline cta fields

--- a/rca/project_styleguide/templates/patterns/atoms/audience-nav-item/audience-nav-item--desc.html
+++ b/rca/project_styleguide/templates/patterns/atoms/audience-nav-item/audience-nav-item--desc.html
@@ -8,6 +8,6 @@
         </svg>
     </a>
     <div class="audience-nav-item__description">
-        {{ value.description }}
+        {{ value.sub_text }}
     </div>
 </div>
