--- a/rca/static_src/sass/components/_programme-overview.scss
+++ b/rca/static_src/sass/components/_programme-overview.scss
@@ -11,11 +11,14 @@
 
     &__body {
         grid-column: 1 / span 2;
-        padding-right: $gutter;
 
         @include media-query(large) {
             grid-column: 3 / span 2;
         }
+    }
+
+    &__description {
+        padding-right: $gutter;
     }
 
     &__pathways {
