--- a/rca/static_src/sass/components/_staff-detail.scss
+++ b/rca/static_src/sass/components/_staff-detail.scss
@@ -17,7 +17,6 @@
 
     &__job-title {
         margin-bottom: $gutter;
-        color: $color--meta;
     }
 
     &__body {
@@ -87,5 +86,21 @@
                 min-width: 50%;
             }
         }
+    }
+
+    .bg--dark & {
+
+        #{$root}__job-title {
+            color: $color--meta-darkbg;
+        }
+
+    }
+
+    .bg--light & {
+
+        #{$root}__job-title {
+            color: $color--meta-lightbg;
+        }
+
     }
 }
