--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -14,7 +14,9 @@
                 <p class="introduction">
                     {{ page.programme_description_subtitle }}
                 <p>
-                {{ page.programme_description_copy|safe }}
+                <div class="programme-overview__description">
+                    {{ page.programme_description_copy|safe }}
+                </div>
                 <div class="programme-overview__pathways">
                     {% include "patterns/molecules/pathways/pathways.html" with summary=page.pathways_summary pathways=page.pathway_blocks %}
                 </div>
