--- a/rca/static_src/sass/components/_featured-alumni.scss
+++ b/rca/static_src/sass/components/_featured-alumni.scss
@@ -16,6 +16,7 @@
 
     &__introduction {
         grid-column: 1 / span 2;
+        margin-bottom: ($gutter * 2);
 
         @include media-query(medium) {
             grid-column: 1 / span 1;
@@ -53,15 +54,13 @@
         li {
             margin-bottom: ($gutter / 4);
         }
-
-        a {
-            color: $color--meta;
-        }
     }
 
     .bg--dark & {
         #{$root}__list {
             a {
+                color: $color--meta-darkbg;
+
                 &:hover,
                 &:active,
                 &:focus {
@@ -74,6 +73,8 @@
     .bg--light & {
         #{$root}__list {
             a {
+                color: $color--meta-lightbg;
+
                 &:hover,
                 &:active,
                 &:focus {
