--- a/rca/static_src/sass/components/_image-video-block.scss
+++ b/rca/static_src/sass/components/_image-video-block.scss
@@ -62,10 +62,6 @@
             margin-bottom: ($gutter / 2);
         }
 
-        &--meta-copy {
-            color: $color--dark-grey;
-        }
-
         @include media-query(medium) {
             grid-column: 2 / span 1;
         }
@@ -85,5 +81,21 @@
         @include media-query(large) {
             grid-column: 4 / span 1;
         }
+    }
+
+    .bg--dark & {
+
+        #{$root}__copy--meta-copy {
+            color: $color--meta-darkbg;
+        }
+
+    }
+
+    .bg--light & {
+
+        #{$root}__copy--meta-copy {
+            color: $color--meta-lightbg;
+        }
+
     }
 }
