Hero parallax tweak

--- a/rca/static_src/sass/components/_proposition-statement.scss
+++ b/rca/static_src/sass/components/_proposition-statement.scss
@@ -1,5 +1,6 @@
 .proposition-statement {
     $root: &;
+    padding-bottom: ($grid * 4);
 
     &__introduction {
         @include font-size(xxxxl);
