--- a/rca/project_styleguide/templates/patterns/atoms/image/image--lazyload.html
+++ b/rca/project_styleguide/templates/patterns/atoms/image/image--lazyload.html
@@ -1,1 +1,1 @@
-<img src="{{ imageSmall.url }}" data-src="{{ imageLarge.url }}" width="{{ width }}" height="{{ height }}" alt="{{ imageLarge.alt }}" class="{{ classList }} lazyload">
+<img src="{{ image_small.url }}" data-src="{{ image_large.url }}" width="{{ width }}" height="{{ height }}" alt="{{ image_large.alt }}" class="{{ classList }} lazyload">
