--- a/rca/project_styleguide/templates/patterns/atoms/image/image.html
+++ b/rca/project_styleguide/templates/patterns/atoms/image/image.html
@@ -1,8 +1,8 @@
 {% load wagtailimages_tags %}
 
-{% image image fill-100x37 as imageSmall %}
-{% image image fill-1134x595 as imageLarge %}
+{% image image fill-100x37 as image_small %}
+{% image image fill-1134x595 as image_large %}
 
 <div class="image {{ modifier }}">
-    {% include "patterns/atoms/image/image--lazyload.html" with imageSmall=imageSmall width=1134 height=595 imageLarge=imageLarge classList='image__item' %}
+    {% include "patterns/atoms/image/image--lazyload.html" with image_small=image_small width=1134 height=595 image_large=image_large classList='image__item' %}
 </div>
