--- a/rca/project_styleguide/templates/patterns/molecules/card/card--square.html
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card--square.html
@@ -1,12 +1,12 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 <div class="card card--square {% if item.image %}card--image{% endif %} {% if item.person %}card--person{% endif %}">
     {% if item.image %}
-        {% image card.image fill-80x80 as imageSmall %}
-        {% image card.image fill-554x554 as imageLarge %}
+        {% image card.image fill-80x80 as image_small %}
+        {% image card.image fill-554x554 as image_large %}
     {% endif %}
     <div class="card__container">
         {% if item.link %}<a href="{{ item.link }}" class="card__image-container" aria-label="{{ item.title }}">{% endif %}
-            {% if item.image %}{% include "patterns/atoms/image/image--lazyload.html" with imageSmall=imageSmall width=554 height=554 imageLarge=imageLarge classList='card__image' %}{% endif %}
+            {% if item.image %}{% include "patterns/atoms/image/image--lazyload.html" with image_small=image_small width=554 height=554 image_large=image_large classList='card__image' %}{% endif %}
         {% if item.link %}</a>{% endif %}
         <div class="card__content-container">
             <div class="card__content">
