--- a/rca/project_styleguide/templates/patterns/molecules/hero/hero--home.html
+++ b/rca/project_styleguide/templates/patterns/molecules/hero/hero--home.html
@@ -8,18 +8,18 @@
         </div>
     {% endif %}
 
-    {% image page.hero_image fill-320x568 as imageSmall %}
+    {% image page.hero_image fill-320x568 as image_small %}
     {% image page.hero_image fill-768x1024 as imageMedium %}
-    {% image page.hero_image fill-1440x900 as imageLarge %}
+    {% image page.hero_image fill-1440x900 as image_large %}
 
-    <img srcset="{{ imageSmall.url }} 320w,
+    <img srcset="{{ image_small.url }} 320w,
                  {{ imageMedium.url }} 768w,
-                 {{ imageLarge.url }} 1440w"
+                 {{ image_large.url }} 1440w"
                  sizes="(max-width: 598px) 290px,
                         (max-width: 1022px) and (min-width: 599px) 768px,
                         (min-width: 1023px) 1440px"
-                 src="{{ imageLarge.url }}"
-                 alt="{{ imageLarge.alt }}"
+                 src="{{ image_large.url }}"
+                 alt="{{ image_large.alt }}"
                  class="hero__image"
                 >
 </div>
