--- a/rca/project_styleguide/templates/patterns/molecules/hero/hero.html
+++ b/rca/project_styleguide/templates/patterns/molecules/hero/hero.html
@@ -1,18 +1,18 @@
 {% load wagtailimages_tags %}
 
 <div class="hero {% if modifier %}hero--{{ modifier }}{% endif %}">
-    {% image page.hero_image fill-320x285 as imageSmall %}
+    {% image page.hero_image fill-320x285 as image_small %}
     {% image page.hero_image fill-768x530 as imageMedium %}
-    {% image page.hero_image fill-1440x530 as imageLarge %}
+    {% image page.hero_image fill-1440x530 as image_large %}
 
-    <img srcset="{{ imageSmall.url }} 320w,
+    <img srcset="{{ image_small.url }} 320w,
                  {{ imageMedium.url }} 768w,
-                 {{ imageLarge.url }} 1440w"
+                 {{ image_large.url }} 1440w"
                  sizes="(max-width: 598px) 290px,
                         (max-width: 1022px) and (min-width: 599px) 768px,
                         (min-width: 1023px) 1440px"
-                 src="{{ imageLarge.url }}"
-                 alt="{{ imageLarge.alt }}"
+                 src="{{ image_large.url }}"
+                 alt="{{ image_large.alt }}"
                  class="hero__image"
                 >
 </div>
