--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -74,6 +74,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </main>
 
         <footer class="app__footer">
+            {% include "patterns/atoms/grid-lines/grid-lines.html" %}
             {% block footer %}{% endblock %}
         </footer>
 
