--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -8,6 +8,7 @@
 
     <div class="page page--overlay" id="content">
 
+        {% include "patterns/atoms/grid-lines/grid-lines.html" %}
         {% include "patterns/molecules/hero-action-pane/hero-action-pane.html" %}
 
         <div class="page__content">
